# play-cosm

./: .gitignore  README.md
app/: .gitignore  config.json  package.json
app/academy-deploy/: package-lock.json  package.json
app/academy-deploy/scripts/: networks.ts  upload_contract.ts
app/scripts/: main.ts  networks.ts  upload_contract.ts
app/scripts/contracts/: cw20.wasm
app/scripts/helpers/: arch.ts  connect.ts  cw20.ts  initToken.ts  uploadContracts.ts
contracts/: Cargo.toml  config-arch.json  deploy.md
contracts/archway/: deploy.md
contracts/archway/arch/: package.json
contracts/archway/arch-one/: Cargo.toml  NOTICE  config.json
contracts/archway/arch-one/examples/: schema.rs
contracts/archway/arch-one/src/: contract.rs
contracts/archway/bridge/: package.json
contracts/archway/bridge/scripts/: main.ts  networks.ts  upload_contract.ts
contracts/archway/bridge/scripts/helpers/: initToken.ts
contracts/archway/counter/: Cargo.toml
contracts/archway/cw20/: config.json
contracts/archway/cw20/examples/: schema.rs
contracts/bridge/: Cargo.toml  config.json  package.json.bak
contracts/bridge/schema/: bridge.json
contracts/bridge/scripts/: main.ts
contracts/bridge/scripts/helpers/: connect.ts
contracts/bridge/src/: contract.rs
contracts/bridge_bak/: Makefile  dev.md
contracts/bridge_bak/scripts/: check_wasm.sh
contracts/bridge_bak/src/: contract.rs  lib.rs  msg.rs  utils.rs
contracts/bridge_bak/src/tests/: mock.rs  tests.rs
contracts/cosmd/: .gitignore  Cargo.toml
contracts/cosmd/bridge/: Cargo.toml  dev.md
contracts/cosmd/bridge/.cargo/: config
contracts/cosmd/bridge/examples/: exam.rs  schema.rs
contracts/cosmd/bridge/schema/: bridge.json
contracts/cosmd/bridge/schema/raw/: execute.json  instantiate.json  query.json  response_to_query_cw20_address.json
contracts/cosmd/bridge/src/: contract.rs  error.rs  lib.rs  msg.rs  query.rs  state.rs  tests.rs  utils.rs
contracts/cosmd/bridge/src/tests/: internal.rs  mock.rs  mod.rs  tests.rs
contracts/cosmd/simple/: Cargo.toml
contracts/cosmd/simple/.cargo/: config
contracts/cosmd/simple/src/: contract.rs  error.rs  lib.rs  message.rs  msg.rs  state.rs
contracts/cosmd/simple/src/test/: test_bank.rs  test_rpc.rs
contracts/counter/: config.json
contracts/counter/ts/: Counter.client.ts  Counter.types.ts
contracts/cw20/: Cargo.toml  config.json
contracts/cw20/src/: contract.rs
contracts/simple/: Cargo.toml
contracts/simple/src/: contract.rs  lib.rs  message.rs
contracts/simple/src/test/: mod.rs  test_bank.rs
docs/: Chain_setup.md  IgniteCLI.md  archway.md  blog.md  contract.md  dapp.md  ibc.md  resource.md  tmp.json
docs/wasmd/: wasmd.md
scripts/: blog.yaml  config-relayer.sh  startchain.sh
testjs/: basic.ts  generate_mnemonic.ts  package-lock.json  package.json  testnet.alice.mnemonic.key  wasm.ts
testjs/src/: basic.ts  generate_mnemonic.ts  keys.ts  wasm.ts
vscode/: backend.code-workspace
