[package]
name = "simple"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
archway-bindings = "0.1.0"
cosmwasm-schema = "1.2.2"
cosmwasm-std = "1.2.2"
cosmwasm-storage = "1.2.2"
cw-storage-plus = "1.0.1"
cw2 = "1.0.1"
schemars = "0.8.12"
semver = "1.0.14"
serde = { version = "1.0.152", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.38" }
cw-controllers = { version = "1.0.0" }

[features]
library = []

[dev-dependencies]
cw-multi-test = { version = "0.16.0" }

