[package]
name = "bridge"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-std = {version = "1.2.1", features = ["cosmwasm_1_2"]}
cosmwasm-schema = "1.2.0"
serde = { version = "1.0.147"}
cw-controllers = {version = "1.0.1" }
cw-storage-plus = "1.0.1"
cw-utils = "1.0.0"
thiserror = { version = "1.0.23" }
ethaddr = {verson = "0.1.2", default-features = false}
# must use the feature library to disable all instantiate/execute/query exports
cw20-base = {version = "1.0.0", features = ["library"]}
cw20 = "1.0.0"
cw2 = "1.0.0"

[dev-dependencies]
cw-multi-test = { version = "0.16.2" }
lazy_static = "1.4.0"



