[package]
name = "simple"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
cosmwasm-std = { version = "1.0.0-beta8", features = ["staking"] }
serde = { version = "1.0.147"}
cw-controllers = {version = "0.16.0"}
cw-storage-plus = "0.16.0"
thiserror = { version = "1.0.23" }

[dev-dependencies]
cw-multi-test = { version = "*"}