[package]
name = "simple"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cosmwasm-std = { version = "1.2.1", features = ["staking", "cosmwasm_1_2"] }
cosmwasm-schema = "1.1.1"
serde = { version = "1.0.147"}
cw-controllers = {version = "0.16.0"}
cw-storage-plus = "0.16.0"
thiserror = { version = "1.0.23" }
cw2 = { version = "1.0.0" }
semver = "1.0.14"

[features]
library = []

[dev-dependencies]
cw-multi-test = { version = "0.16.0"}

